refactor and shi